# modplug

./: .gitignore  CMakeLists.txt
cmake/: FindLibZip.cmake  FindModPlug.cmake
src/: common.c  common.h  local_file_plugin_api.h  modplug-spotify.c  parser.c  playback.c
